fix: research output tweaks

--- a/board-game-qa.ipynb
+++ b/board-game-qa.ipynb
@@ -5,8 +5,8 @@
    "id": "a1fdefcf-62a6-42ea-a9f8-92856afe46e3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-03T11:16:18.895745Z",
-     "start_time": "2025-02-03T11:16:16.453786Z"
+     "end_time": "2025-02-03T11:23:56.317991Z",
+     "start_time": "2025-02-03T11:23:56.312064Z"
     }
    },
    "source": [
@@ -18,34 +18,25 @@
    ],
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/vicente/Library/Caches/pypoetry/virtualenvs/gen-ai-demos-umKuaqgj-py3.12/lib/python3.12/site-packages/pydantic/_internal/_config.py:345: UserWarning: Valid config keys have changed in V2:\n",
-      "* 'fields' has been removed\n",
-      "  warnings.warn(message, UserWarning)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1
+   "execution_count": 14
   },
   {
    "cell_type": "code",
    "id": "1b87cf4c-8d81-4a45-99dd-32eab6d4bfd1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-03T11:16:18.901651Z",
-     "start_time": "2025-02-03T11:16:18.896733Z"
+     "end_time": "2025-02-03T11:23:56.330028Z",
+     "start_time": "2025-02-03T11:23:56.319659Z"
     }
    },
    "source": [
@@ -84,22 +75,22 @@
     "        for subquestion in subquestions:\n",
     "            print(f\" - Researching: {subquestion}\")\n",
     "            research = self.research(subquestion=subquestion, question=question)\n",
-    "            research_context = research_context + [research.context]\n",
+    "            research_context = research_context + [research]\n",
     "\n",
-    "        final_research = self.summarize(context=research_context, question=question)\n",
+    "        final_research = self.summarize(context=list(map(lambda r: r.context, research_context)), question=question)\n",
     "\n",
-    "        return dspy.Prediction(answer=final_research.summary)"
+    "        return dspy.Prediction(answer=final_research.summary, research=research_context)"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 15
   },
   {
    "cell_type": "code",
    "id": "69833045-86a6-4693-8782-1c384c12c01d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-03T11:16:18.903713Z",
-     "start_time": "2025-02-03T11:16:18.902226Z"
+     "end_time": "2025-02-03T11:23:56.333712Z",
+     "start_time": "2025-02-03T11:23:56.331288Z"
     }
    },
    "source": [
@@ -107,15 +98,15 @@
     "dspy.configure(lm=lm)"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 16
   },
   {
    "cell_type": "code",
    "id": "8ea9f265-140d-4c78-9122-f69f87b69fcf",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-03T11:17:19.198650Z",
-     "start_time": "2025-02-03T11:16:18.904779Z"
+     "end_time": "2025-02-03T11:23:56.345106Z",
+     "start_time": "2025-02-03T11:23:56.335938Z"
     }
    },
    "source": [
@@ -138,43 +129,78 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 17
   },
   {
    "cell_type": "code",
-   "id": "478000b7-e952-4bf8-aebf-22090ddfc995",
+   "id": "d660c7e6f2aa4b5b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-03T11:17:19.207059Z",
-     "start_time": "2025-02-03T11:17:19.200797Z"
+     "end_time": "2025-02-03T11:24:55.102112Z",
+     "start_time": "2025-02-03T11:24:55.099895Z"
     }
    },
-   "source": [
-    "recommendation\n"
-   ],
+   "source": "print(f\"Answer: {recommendation.answer}\")",
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Prediction(\n",
-       "    answer='The best opening move in Catan involves placing initial settlements to maximize access to key resources like brick, wood, and wheat, ensuring a balanced mix and high-frequency numbers for steady resource flow. Strategy should adapt based on the number of players, with a focus on resource balance in 4-player games. Consideration of ports for trading advantages, while balancing resource diversity, is crucial. Understanding the board layout and potential trading opportunities enhances strategic positioning, avoiding common mistakes like resource imbalance and poor expansion potential.'\n",
-       ")"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer: The best opening move in Catan involves placing initial settlements to maximize access to key resources like brick, wood, and wheat, ensuring a balanced mix and high-frequency numbers for steady resource flow. Strategy should adapt based on the number of players, with a focus on resource balance in 4-player games. Consideration of ports for trading advantages, while balancing resource diversity, is crucial. Understanding the board layout and potential trading opportunities enhances strategic positioning, avoiding common mistakes like resource imbalance and poor expansion potential.\n"
+     ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 20
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-03T11:24:58.367064Z",
+     "start_time": "2025-02-03T11:24:58.363579Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(f\"Research: {recommendation.research}\")",
+   "id": "478000b7-e952-4bf8-aebf-22090ddfc995",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Research: [Prediction(\n",
+      "    reasoning='In Catan, the opening move is crucial because it sets the foundation for your resource production throughout the game. The most important resources to prioritize in the opening move are typically brick and wood, as they are essential for building roads and settlements, which are key to expanding your territory and accessing more resources. Additionally, wheat is important for building settlements and cities, while ore becomes more valuable as the game progresses for upgrading settlements to cities. Balancing these resources based on the board layout and your strategy is essential for a strong start.',\n",
+      "    context='The best opening move in Catan involves strategically placing your initial settlements to maximize access to key resources like brick, wood, and wheat. These resources are crucial for early game expansion and development. By prioritizing these resources, players can build roads and settlements more efficiently, which is vital for gaining access to additional resource tiles and increasing their production capabilities. This context highlights the importance of resource prioritization in determining the effectiveness of an opening move in Catan.'\n",
+      "), Prediction(\n",
+      "    reasoning='The number of players in Catan significantly influences the strategy for the opening move because it affects the availability of resources and the competition for key locations on the board. In a 3-player game, there are more available spots and less competition, allowing players to prioritize high-value resource combinations and strategic placements more freely. In contrast, a 4-player game increases competition for prime locations, making it crucial to secure a balanced resource spread early on. Additionally, the number of players affects the distribution of settlements and roads, which can impact future expansion and trading opportunities.',\n",
+      "    context='Understanding how the number of players affects the strategy for the opening move in Catan provides insight into the best opening move. In a 3-player game, players might focus on securing high-production resource hexes with less immediate concern for balance, while in a 4-player game, ensuring a balanced resource intake becomes more critical due to increased competition. This context helps in determining the best opening move by highlighting the importance of adapting strategy based on the number of players to optimize resource acquisition and future expansion potential.'\n",
+      "), Prediction(\n",
+      "    reasoning='Starting near ports in Catan can offer strategic advantages and disadvantages that impact the overall gameplay. Ports allow players to trade resources at more favorable rates, which can be crucial if a player is lacking certain resources due to their initial settlement placements. For example, a player with a settlement on a 3:1 port can trade three of any one resource for one of any other resource, providing flexibility in resource management. Specialized ports, like a 2:1 port for a specific resource, can be even more advantageous if a player has a surplus of that resource.\\n\\nHowever, there are also disadvantages to starting near ports. Settlements on ports are often located on the coast, which means they typically have access to fewer resource hexes compared to inland settlements. This can limit the variety and quantity of resources a player can collect, potentially slowing down their development if they cannot effectively trade. Additionally, focusing too much on ports might lead to neglecting other strategic aspects, such as road building or securing high-frequency resource tiles.',\n",
+      "    context='Understanding the advantages and disadvantages of starting near ports in Catan is crucial for determining the best opening move. Ports can provide significant trading advantages, allowing players to mitigate resource shortages and maintain flexibility in their strategy. However, the potential limitation in resource diversity and quantity must be balanced against these benefits. When considering the best opening move, players should weigh the immediate trading benefits of ports against the long-term resource acquisition potential of inland settlements. This context helps players decide whether to prioritize port access or focus on maximizing resource intake from the start.'\n",
+      "), Prediction(\n",
+      "    reasoning='In Catan, the opening move is crucial as it sets the foundation for your resource acquisition strategy throughout the game. Balancing between resource diversity and production frequency involves choosing settlement locations that provide access to a variety of resources while also ensuring that these resources are produced frequently. Resource diversity is important because it allows you to build roads, settlements, and cities, and to trade effectively. However, if you focus too much on diversity without considering the frequency of production, you may find yourself with a wide range of resources but in insufficient quantities to make meaningful progress. Conversely, focusing solely on high-frequency production might lead to an abundance of certain resources but a lack of others, which can also hinder your development. The key is to find a balance where you have access to the essential resources (brick, wood, wheat, sheep, and ore) with a preference for those that are rolled more often, typically on hexes with numbers like 6 and 8.',\n",
+      "    context='The best opening move in Catan involves selecting settlement locations that provide a balanced mix of resource diversity and production frequency. This means choosing spots that give you access to a variety of resources needed for building and trading, while also ensuring that these resources are on hexes with numbers that are rolled frequently. This strategy helps in maintaining a steady flow of resources, allowing for consistent development and flexibility in trading, which is crucial for gaining an advantage in the game.'\n",
+      "), Prediction(\n",
+      "    reasoning='Choosing the initial settlement locations in Catan is crucial because it sets the foundation for resource acquisition and future expansion. Common mistakes include prioritizing only one type of resource, ignoring the importance of diverse resource access, and failing to consider the potential for expansion and connectivity. Players often make the error of selecting high-numbered hexes without considering the balance of resources, which can lead to shortages in critical areas like brick or wood, hindering road building and settlement expansion. Additionally, overlooking the strategic value of ports or the potential to block opponents can also be detrimental.',\n",
+      "    context='In the context of determining the best opening move in Catan, understanding the common mistakes in choosing initial settlement locations is vital. The best opening move involves selecting settlement spots that provide a balanced mix of resources (brick, wood, wheat, sheep, and ore) and have good probability numbers (5, 6, 8, 9). Avoiding the mistakes of resource imbalance and poor expansion potential ensures a strong start. Additionally, considering future road placements and the ability to block opponents or access ports can enhance strategic positioning from the outset.'\n",
+      "), Prediction(\n",
+      "    reasoning='In Catan, the initial placement strategy is crucial because it sets the foundation for resource acquisition and future expansion. The specific layout of the board, which is randomly generated each game, significantly influences the best opening moves. Players must consider the distribution of resources (brick, wood, sheep, wheat, and ore) and the numbers on the hexes, which determine the probability of resource production. High-frequency numbers like 6 and 8 are more likely to produce resources, making them desirable locations. Additionally, players should consider the balance of resources needed for building roads, settlements, and cities, as well as potential expansion routes and access to ports. The layout can also dictate defensive strategies, such as blocking opponents or securing key intersections.',\n",
+      "    context=\"The best opening move in Catan is highly dependent on the specific board layout. Players should aim to place their initial settlements on intersections that provide access to a variety of resources, ideally with high-frequency numbers. This ensures a steady flow of resources needed for development. The layout also influences strategic decisions, such as prioritizing certain resources based on scarcity or abundance, and planning expansion routes to secure additional resources or block opponents. Understanding the board's layout allows players to make informed decisions that align with their long-term strategy.\"\n",
+      "), Prediction(\n",
+      "    reasoning=\"In Catan, trading is a crucial aspect of the game that can significantly influence the effectiveness of an opening move. The ability to trade resources with other players or through the bank allows players to adapt their strategies based on the resources they have and the ones they need. An opening move that positions a player to have access to a variety of resources or to control key trading ports can provide a strategic advantage. This is because it increases the player's flexibility in trading, allowing them to compensate for any resource shortages and to pursue their development goals more effectively. Therefore, when considering the best opening move, one must evaluate not only the immediate resource production but also the potential for advantageous trading opportunities.\",\n",
+      "    context=\"Trading plays a pivotal role in determining the best opening move in Catan because it enhances a player's ability to adapt their strategy based on resource availability. An effective opening move should consider the potential for trading, either by ensuring access to diverse resources or by controlling strategic trading ports. This flexibility in trading can help mitigate resource shortages and support a player's overall development strategy, making trading a key factor in evaluating the best opening move.\"\n",
+      ")]\n"
+     ]
+    }
+   ],
+   "execution_count": 21
   },
   {
    "cell_type": "code",
    "id": "1019f06a-2ada-4059-a1f4-dd1776a7913b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-03T11:17:19.213253Z",
-     "start_time": "2025-02-03T11:17:19.208582Z"
+     "end_time": "2025-02-03T11:23:56.352114Z",
+     "start_time": "2025-02-03T11:23:56.349109Z"
     }
    },
    "source": [
@@ -189,7 +215,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001B[34m[2025-02-03T12:16:27.636671]\u001B[0m\n",
+      "\u001B[34m[2025-02-03T12:23:56.339532]\u001B[0m\n",
       "\n",
       "\u001B[31mSystem message:\u001B[0m\n",
       "\n",
@@ -247,7 +273,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001B[34m[2025-02-03T12:16:38.619441]\u001B[0m\n",
+      "\u001B[34m[2025-02-03T12:23:56.340500]\u001B[0m\n",
       "\n",
       "\u001B[31mSystem message:\u001B[0m\n",
       "\n",
@@ -304,7 +330,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001B[34m[2025-02-03T12:16:42.494435]\u001B[0m\n",
+      "\u001B[34m[2025-02-03T12:23:56.340924]\u001B[0m\n",
       "\n",
       "\u001B[31mSystem message:\u001B[0m\n",
       "\n",
@@ -361,7 +387,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001B[34m[2025-02-03T12:16:48.479255]\u001B[0m\n",
+      "\u001B[34m[2025-02-03T12:23:56.341303]\u001B[0m\n",
       "\n",
       "\u001B[31mSystem message:\u001B[0m\n",
       "\n",
@@ -420,7 +446,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001B[34m[2025-02-03T12:16:55.079619]\u001B[0m\n",
+      "\u001B[34m[2025-02-03T12:23:56.341773]\u001B[0m\n",
       "\n",
       "\u001B[31mSystem message:\u001B[0m\n",
       "\n",
@@ -477,7 +503,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001B[34m[2025-02-03T12:17:00.650273]\u001B[0m\n",
+      "\u001B[34m[2025-02-03T12:23:56.342129]\u001B[0m\n",
       "\n",
       "\u001B[31mSystem message:\u001B[0m\n",
       "\n",
@@ -534,7 +560,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001B[34m[2025-02-03T12:17:05.624894]\u001B[0m\n",
+      "\u001B[34m[2025-02-03T12:23:56.342478]\u001B[0m\n",
       "\n",
       "\u001B[31mSystem message:\u001B[0m\n",
       "\n",
@@ -591,7 +617,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001B[34m[2025-02-03T12:17:10.825372]\u001B[0m\n",
+      "\u001B[34m[2025-02-03T12:23:56.342914]\u001B[0m\n",
       "\n",
       "\u001B[31mSystem message:\u001B[0m\n",
       "\n",
@@ -648,7 +674,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001B[34m[2025-02-03T12:17:19.195602]\u001B[0m\n",
+      "\u001B[34m[2025-02-03T12:23:56.343339]\u001B[0m\n",
       "\n",
       "\u001B[31mSystem message:\u001B[0m\n",
       "\n",
@@ -708,20 +734,7 @@
      ]
     }
    ],
-   "execution_count": 6
-  },
-  {
-   "cell_type": "code",
-   "id": "cd659a8b-7c83-41b1-8761-5c9489b6aab7",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-03T11:17:19.216571Z",
-     "start_time": "2025-02-03T11:17:19.214517Z"
-    }
-   },
-   "source": [],
-   "outputs": [],
-   "execution_count": 6
+   "execution_count": 19
   }
  ],
  "metadata": {
