--- a/board-game-qa.ipynb
+++ b/board-game-qa.ipynb
@@ -41,20 +41,18 @@
    },
    "source": [
     "class BoardGameResearchPlanner(dspy.Signature):\n",
+    "    \"\"\"Takes the user query and plans deep research by figuring out subquestions that relate to the theme the user is interested in knowing more\"\"\"\n",
     "    question = dspy.InputField(desc=\"The user's initial query when researching board games\")\n",
     "    subquestions: list[str] = dspy.OutputField(desc=\"A list of 5 or more subquestions that dive deeper in the theme the user is researching.\")\n",
     "\n",
     "class BoardGameResearcher(dspy.Signature):\n",
+    "    \"\"\"Takes the original question and the related question and finds an answer to the subquestion that is related to the original question\"\"\"\n",
     "    question = dspy.InputField(desc=\"The user's initial query about board games\")\n",
     "    subquestion: str = dspy.InputField(desc=\"The subquestion you are doing deep research on\")\n",
     "    context = dspy.OutputField(desc=\"The context learned by answering the subquestion while relevant to the initial question\")\n",
     "\n",
-    "class BoardGameQuestionAnswer(dspy.Signature):\n",
-    "    question = dspy.InputField(desc=\"The user's initial query about board games\")\n",
-    "    answer = dspy.OutputField(desc=\"The final answer including all the context researched about board games.\")\n",
-    "\n",
     "class BoardGameResearchSummarizer(dspy.Signature):\n",
-    "    \"\"\"Condense retrieved information into a focused summary.\"\"\"\n",
+    "    \"\"\"Condense the retrieved information provided in the context into a focused summary that answers the original question.\"\"\"\n",
     "    question = dspy.InputField(desc=\"The user's initial query about board games\")\n",
     "    context: list[str] = dspy.InputField(desc=\"Research context discovered about the board games you are about to recommend\")\n",
     "    summary = dspy.OutputField(desc=\"Condense retrieved information into a focused summary relevant to the provided context and user question. Provide specific details supporting the answer to the question.\")\n",
@@ -66,7 +64,6 @@
     "        self.plan_research = dspy.ChainOfThought(BoardGameResearchPlanner)\n",
     "        self.research = dspy.ChainOfThought(BoardGameResearcher)\n",
     "        self.summarize = dspy.ChainOfThought(BoardGameResearchSummarizer)\n",
-    "        self.answer = dspy.ChainOfThought(BoardGameQuestionAnswer)\n",
     "\n",
     "    def forward(self, question):\n",
     "        subquestions = self.plan_research(question=question).subquestions\n",
@@ -735,6 +732,112 @@
     }
    ],
    "execution_count": 19
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-03T11:53:17.196902Z",
+     "start_time": "2025-02-03T11:52:28.875982Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "monopoly = BoardGameAssistant()\n",
+    "monoreco = assistant(question=\"What is the best opening move in Monopoly?\")"
+   ],
+   "id": "665618725b28318f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question: What is the best opening move in Monopoly? research tasks: 8\n",
+      " - Researching: What are the most statistically likely properties to land on in the first few turns of Monopoly?\n",
+      " - Researching: How does the number of players in a game of Monopoly affect the best opening strategy?\n",
+      " - Researching: What are the advantages and disadvantages of buying railroads early in the game?\n",
+      " - Researching: Which properties are considered the most valuable in terms of return on investment?\n",
+      " - Researching: How do house rules or variations of Monopoly impact the effectiveness of different opening moves?\n",
+      " - Researching: What role does trading play in establishing a strong position early in the game?\n",
+      " - Researching: How important is it to acquire a complete color set early in the game?\n",
+      " - Researching: What are some common mistakes players make in the opening moves of Monopoly?\n"
+     ]
+    }
+   ],
+   "execution_count": 22
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-03T11:53:37.076285Z",
+     "start_time": "2025-02-03T11:53:37.071840Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(monoreco.answer)",
+   "id": "bdafc8a8db780364",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The best opening move in Monopoly involves purchasing properties that are statistically more likely to be landed on early, such as \"Oriental Avenue,\" \"Vermont Avenue,\" and \"Connecticut Avenue.\" Prioritizing properties in the orange and red groups is also strategic due to their high return on investment. Balancing the acquisition of railroads for steady income with the goal of completing color sets is crucial. Additionally, being open to strategic trades and considering house rules or variations can enhance one's position. This approach combines immediate gains with long-term strategic advantages.\n"
+     ]
+    }
+   ],
+   "execution_count": 23
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-03T11:53:44.268737Z",
+     "start_time": "2025-02-03T11:53:44.265786Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(monoreco.research)",
+   "id": "6508a979704dfd18",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Prediction(\n",
+      "    reasoning='In the early stages of Monopoly, the properties that players are most likely to land on are those that are closest to the starting point, \"Go.\" This is because players begin the game by rolling two six-sided dice, which means the most common roll is a 7. Therefore, properties that are 6, 7, or 8 spaces away from \"Go\" are statistically more likely to be landed on in the first few turns. These properties include \"Oriental Avenue,\" \"Vermont Avenue,\" and \"Connecticut Avenue.\" Additionally, the \"Chance\" and \"Community Chest\" cards can also influence early game movement, but the initial dice rolls are the primary factor in determining which properties are landed on first.',\n",
+      "    context='Understanding which properties are statistically more likely to be landed on in the first few turns of Monopoly can inform the best opening move. Since properties like \"Oriental Avenue,\" \"Vermont Avenue,\" and \"Connecticut Avenue\" are more likely to be landed on early, prioritizing the purchase of these properties can be a strategic advantage. This knowledge helps players make informed decisions about which properties to aim for when they have the opportunity to buy, potentially leading to a stronger position as the game progresses.'\n",
+      "), Prediction(\n",
+      "    reasoning='The number of players in a game of Monopoly significantly affects the best opening strategy because it influences the availability of properties, the speed at which the game progresses, and the competition for resources. With more players, properties are purchased more quickly, and the chance of landing on unowned properties decreases. This means that in games with more players, aggressive property acquisition early on is crucial. Conversely, with fewer players, there is more opportunity to be selective about which properties to buy, and players can afford to wait for better opportunities.',\n",
+      "    context='The best opening move in Monopoly is influenced by the number of players. In games with more players, it is generally advantageous to buy any property you land on early in the game to prevent opponents from completing color sets and to increase your own chances of building monopolies. In games with fewer players, you might have the luxury to be more strategic about which properties to purchase, focusing on those that offer the best return on investment or that are part of a color set you can complete quickly.'\n",
+      "), Prediction(\n",
+      "    reasoning='Buying railroads early in Monopoly can be a strategic move with both advantages and disadvantages. The primary advantage is that owning all four railroads can provide a steady income stream, as players landing on them must pay rent, which increases with the number of railroads owned. This can be particularly beneficial in the early game when cash flow is crucial. Additionally, railroads are relatively inexpensive compared to other properties, allowing players to invest in them without depleting their cash reserves significantly.\\n\\nHowever, the disadvantages include the opportunity cost of not investing in properties that can be developed with houses and hotels, which can yield much higher returns in the long run. Railroads do not have the potential for development, so their income is capped. Furthermore, focusing too much on railroads might prevent a player from acquiring a complete color set, which is essential for building houses and hotels and significantly increasing rent.',\n",
+      "    context='In the context of determining the best opening move in Monopoly, understanding the role of railroads is crucial. While buying railroads can provide a steady income and is a relatively low-risk investment, it is important to balance this with the need to acquire properties that can be developed for higher returns. The decision to buy railroads should be weighed against the potential to complete a color set, which is often a more powerful strategy for winning the game. Therefore, the best opening move may involve a combination of acquiring railroads for immediate income and targeting properties that can be developed for long-term gains.'\n",
+      "), Prediction(\n",
+      "    reasoning='In Monopoly, the properties that are considered the most valuable in terms of return on investment are typically those that have a good balance between cost and the rent they can generate once developed. Properties on the orange and red color groups, such as New York Avenue, Tennessee Avenue, and Illinois Avenue, are often highlighted for their high return on investment. This is because they are relatively affordable to purchase and develop with houses, and they are frequently landed on due to their position on the board, especially after players exit jail.',\n",
+      "    context='Understanding which properties offer the best return on investment in Monopoly helps inform strategic decisions about which properties to prioritize acquiring early in the game. This knowledge is relevant to determining the best opening move because it suggests that players should aim to acquire properties in the orange and red groups as soon as possible. This can influence decisions such as which properties to buy when landing on them, which trades to pursue, and how to allocate initial funds.'\n",
+      "), Prediction(\n",
+      "    reasoning='House rules or variations in Monopoly can significantly alter the effectiveness of different opening moves because they can change the dynamics of the game. For example, some house rules might allow players to collect money when landing on Free Parking, which can increase the amount of cash in circulation and affect property purchasing strategies. Other variations might involve different rules for auctions or trading, which can influence the value of certain properties or the timing of purchases. These changes can make certain opening moves more or less advantageous depending on how they interact with the altered rules.',\n",
+      "    context='The best opening move in Monopoly can depend on the specific house rules or variations being used. For instance, if a house rule allows for collecting money on Free Parking, players might prioritize acquiring properties that are more likely to generate income quickly. Alternatively, if auctions are more common due to a variation, players might focus on accumulating cash to outbid others. Understanding these variations is crucial for determining the most effective opening strategy.'\n",
+      "), Prediction(\n",
+      "    reasoning=\"Trading in Monopoly is a strategic element that can significantly influence a player's position early in the game. By trading properties, players can complete color sets, which allows them to build houses and hotels, increasing their income potential. Early trades can also help players acquire properties that are more strategically valuable or align with their long-term strategy. Successful trading requires negotiation skills and an understanding of the value of properties relative to their position on the board and the current game state.\",\n",
+      "    context=\"In the context of determining the best opening move in Monopoly, understanding the role of trading is crucial. Early in the game, players should focus on acquiring properties that are part of a color set, as this will enable them to trade more effectively. Trading can help players secure complete sets faster, allowing them to build houses and increase their income potential. Therefore, the best opening move involves not only purchasing properties but also being open to strategic trades that can enhance one's position and lead to a stronger financial standing in the game.\"\n",
+      "), Prediction(\n",
+      "    reasoning='Acquiring a complete color set early in Monopoly is crucial because it allows a player to start building houses and hotels, which significantly increases the rent opponents must pay when they land on those properties. This can create a steady income stream and put financial pressure on other players, potentially leading to their bankruptcy. The ability to develop properties is a key strategy in gaining a competitive advantage and controlling the game.',\n",
+      "    context='In the context of determining the best opening move in Monopoly, focusing on acquiring a complete color set early can be a highly effective strategy. This approach allows players to quickly start developing properties, which is essential for increasing their income and gaining a strategic advantage over opponents. Therefore, when considering opening moves, players should prioritize landing on and purchasing properties that will help them complete a color set.'\n",
+      "), Prediction(\n",
+      "    reasoning=\"In Monopoly, the opening moves can significantly impact a player's success throughout the game. Common mistakes include not buying properties early on, focusing too much on acquiring specific properties like Boardwalk and Park Place, and not managing cash flow effectively. Players often overlook the importance of acquiring a mix of properties to build monopolies and generate income through rent. Additionally, failing to trade strategically with other players can hinder progress. Understanding these mistakes helps in formulating a better opening strategy.\",\n",
+      "    context='By identifying common mistakes in the opening moves of Monopoly, such as not purchasing properties early, overvaluing certain properties, and poor cash management, players can develop a more effective opening strategy. This involves being open to buying a variety of properties to increase the chances of forming monopolies, managing cash reserves to avoid bankruptcy, and engaging in strategic trades. These insights are crucial for determining the best opening move in Monopoly, as they highlight the importance of flexibility, strategic property acquisition, and financial prudence.'\n",
+      ")]\n"
+     ]
+    }
+   ],
+   "execution_count": 24
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "a69475a32762dc5c"
   }
  ],
  "metadata": {
